--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -10,7 +10,8 @@
     <title>OWASP Node.js Goat Project</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="/vendor/bootstrap/bootstrap.css" rel="stylesheet">
+   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+
 
     <!-- Add custom CSS here -->
     <link href="/vendor/theme/sb-admin.css" rel="stylesheet">
@@ -108,9 +109,10 @@
     <!-- /#wrapper -->
 
     <!-- Bootstrap core JavaScript -->
-    <script src="/vendor/jquery.min.js"></script>
-    <script src="/vendor/bootstrap/bootstrap.js"></script>
-    <script src="/vendor/bootstrap/bootstrap-tour.js"></script>
+    <!-- <script src="/vendor/jquery.min.js"></script> -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
 
     <!-- Page Specific Plugins -->
     <script src="/vendor/chart/raphael-min.js"></script>
